// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > Snapshots > matches default snapshot 1`] = `
<span
  class="avatar avatar--default"
  data-testid="avatar"
>
  <span
    class="avatar__fallback"
  >
    U
  </span>
</span>
`;

exports[`Avatar > Snapshots > matches loading state snapshot 1`] = `
<span
  class="avatar avatar--default avatar--loading"
  data-testid="avatar"
>
  <span
    class="avatar__fallback"
  >
    U
  </span>
</span>
`;
